package com.telenav.fiasco.runtime.tools.jar;

public class JarManifestUpdater extends BaseJarTool
{

}
