package com.telenav.fiasco.runtime.tools.jar;

public class JarShader extends BaseJarTool
{
}
