package com.telenav.fiasco.runtime.tools.jar;

public class JarSigner extends BaseJarTool
{
}
