package com.telenav.fiasco.tools.jar;

public class JarArchiver extends BaseJarTool
{
    @Override
    public void onRun()
    {

    }
}
