@startuml
'https://plantuml.com/class-diagram

!include lexakai.theme

title "Jar Tools"

top to bottom direction

package fiasco.tools
{
    interface Tool
}

package fiasco.tools.resource
{
    interface ResourceTool
    ResourceTool -u-|> Tool
}

package fiasco.tools.jar
{
    interface JarTool

    JarTool -u--|> ResourceTool

    class JarArchiver
    class JarShader
    class JarSigner
    class JarManifestUpdater

    JarArchiver        -u--|> JarTool
    JarShader          -r-|> JarTool
    JarSigner          -l-|> JarTool
    JarManifestUpdater -u--|> JarTool
}
@enduml

